manifests/prod/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: rube  
spec:
  parentRefs:
  - name: external-http
    namespace: gateway
  hostnames:
  - "dev.foyle.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /demo/prod
    filters:
      - type: URLRewrite
        urlRewrite:          
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: rube-prod
      port: 80
